fix open cart height on mobile

--- a/src/components/shoppingCart/shoppingCart.module.scss
+++ b/src/components/shoppingCart/shoppingCart.module.scss
@@ -19,7 +19,9 @@
   z-index: 100;
 
   width: max(300px, 40vw);
-  height: 100vh;
+
+  height: 100dvh;
+
   padding: 0rem 0.75rem 1rem;
 
   background-color: white;
